smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/unclosed-string3.smithy
// [ERROR] -: Parse error at line 3, column 6 near `"\nhello\nthere\"`: Unexpected syntax. Perhaps an unclosed quote? | Model
namespace abc.def
@foo("
hello
there\"
